# BackYard

./: .envrc.tmpl  .gitignore  Makefile  alembic.ini  main.py  pyproject.toml
Backyard/: conf.py  generate_schema.py  global_models.py  main.py
Backyard/Auth/: authn.py  authz.py
Backyard/Client/documents/: create-document.py  get-documents-by-job-id.py  pdf_base64.txt
Backyard/Client/events/: create-event.py  get-events-by-job-id.py  update-event.py
Backyard/Client/invoices/: create-invoice.py  get-invoices-by-job-id.py  update-invoice.py
Backyard/Client/jobs/: create-job.py  get_job_by_user_id.py
Backyard/Client/photos/: create-photo.py  get-photos-by-job-id.py
Backyard/Client/products/: create-product.py  get-products-by-job-id.py  update-product.py
Backyard/Client/users/: create_user.py  get_all_users.py
Backyard/Factories/: route_factory.py
Backyard/Handlers/RouteHandlers/: base_route_handler.py  create_document_handler.py  create_event_handler.py  create_invoice_handler.py  create_user_handler.py  get_all_jobs_handler.py  get_all_users_handler.py  get_roles_for_user.py  (+6 more)
Backyard/Interfaces/: postgres_connection.py  postgres_orm.py  schemas.py
Client/: get_all_jobs.py  get_job_by_ccid.py  get_roles_for_user.py  get_root.py
Factories/: route_factory.py
Handlers/RouteHandlers/: base_route_handler.py  get_all_jobs_handler.py  get_job_handler.py  get_roles_for_user.py
Interfaces/: cassandra_connection.py  postgres_connection.py
migrations/: env.py
migrations/versions/: 2023_12_05_0208-91fb98e41493_helloworld.py
scripts/: generate_schema.py  migrate.py
