[tool.poetry]
name = "backyard"
version = "0.0.1"
description = ""
authors = [
    "David Carr <david@jcarr.net>",
    "Luke Mason <>",
]


[tool.poetry.scripts]
generate-schema = "Backyard.generate_schema:generate_openapi_schema_file"
migration-create = "scripts.migrate:create"
migration-up = "scripts.migrate:up"

[tool.poetry.dependencies]
python = "^3.8,<3.10"
fastapi = "^0.104.1"
firebase-admin = "^6.2.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
SQLAlchemy = "^2.0.23"
device-detector = "^5.0.1"
simplejson = "^3.19.2"
fastapi-pagination = "^0.12.12"
boto3 = "^1.28.78"
toml = "^0.10.2"
PyYAML = "^6.0.1"
arrow = "^1.3.0"
humanize = "^4.8.0"
sqlalchemy-utils = "^0.41.1"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
setuptools = "^68.2.2"
black = "^23.10.1"
pytest = "^7.4.3"
flake8 = "^3.9.2"
pytz = "^2023.3.post1"
gunicorn = "^21.2.0"
pytest-asyncio = "^0.21.1"
ipython = "^7.25.0"
httpx = "^0.25.1"
rich = "^13.6.0"
isort = "^5.12.0"
flake8-isort = "^4.1.1"
autoflake8 = "^0.3.2"


[tool.black]
line-length = 120

[tool.isort]
profile = "black"
extend_skip = [
    "tests",
]
line_length = 120
indent = 4
multi_line_output = 3
lines_after_imports = 2
combine_as_imports = false
force_adds = false
combine_star = false
include_trailing_comma = true
use_parentheses = true


[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
